fix bug that caused ship to appear behind grid borders

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 body {
